# learnIA

./: Dockerfile  README.md
.github/workflows/: ci-backend.yml  ci-frontend.yml  ci.yml  deploy-main.yml  deploy-staging.yml
app/: dependencies.py  main.py
app/AIChat/: agent_factory.py  gemini_agent.py
backend/: .env  .env.example  Dockerfile  pyproject.toml
backend/app/: README.md  dependencies.py  main.py  settings.py
backend/app/AIChat/: agent.py  agent_factory.py  agent_models_enum.py  gemini_agent.py  message.py
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Navigation.tsx
frontend/src/pages/: ApiKeysPage.tsx  ChatPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
